[gd_scene load_steps=10 format=3 uid="uid://mkvq4b2jgkjq"]

[ext_resource type="Script" path="res://ui/main_menu/campaign_button/campaign_button.gd" id="1_e114v"]
[ext_resource type="Texture2D" uid="uid://dgq2ci5rqb6w1" path="res://resources/cursors/cursor.png" id="1_pk7k7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pnkg6"]
bg_color = Color(0.180392, 0.188235, 0.2, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xtds8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xc54l"]
bg_color = Color(0.6, 0.6, 0.6, 0.458824)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_375u8"]
bg_color = Color(0.6, 0.6, 0.6, 0.458824)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06mwu"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0lf13"]

[sub_resource type="ButtonGroup" id="ButtonGroup_fjelw"]
resource_local_to_scene = false
allow_unpress = true

[node name="CampaignButton" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 34.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pnkg6")
script = ExtResource("1_e114v")

[node name="H" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="IconTexture" type="TextureRect" parent="H"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_pk7k7")
stretch_mode = 3

[node name="V" type="VBoxContainer" parent="H"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -2
alignment = 1

[node name="NameLabel" type="Label" parent="H/V"]
unique_name_in_owner = true
layout_mode = 2
text = "Default"

[node name="PathLabel" type="Label" parent="H/V"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.489622, 0.489622, 0.489622, 1)
text = "/default"

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_xtds8")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_xc54l")
theme_override_styles/hover = SubResource("StyleBoxFlat_375u8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06mwu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0lf13")
toggle_mode = true
button_group = SubResource("ButtonGroup_fjelw")
